[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docwarden"
version = "0.1.0"
description = "Local-first MCP server that indexes framework docs into a searchable local index"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["mcp", "docs", "documentation", "llm", "claude", "cursor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "selectolax>=0.3.21",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.2",
]

[project.urls]
Homepage = "https://github.com/nitishkp001/docwarden"
Repository = "https://github.com/nitishkp001/docwarden"
"Bug Tracker" = "https://github.com/nitishkp001/docwarden/issues"

[project.scripts]
docwarden = "docwarden.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/docwarden"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
